# odoc-llm

./: .gitignore  CLAUDE.md  error_handling.py  extract_docs.py  generate_descriptions.py  generate_embeddings.py  generate_module_descriptions.py  generate_module_index.py  generate_package_descriptions.py  mcp_server.py  parse_html.py  parse_markdown.py  progress_tracker.py  pyproject.toml  semantic_search.py  unified_search.py  version_utils.py
.claude/: settings.local.json
package-descriptions/: base.json  lwt.json
package-embeddings/: checkpoint.json
