[project]
name = "odoc-llm"
version = "0.1.0"
description = "OCaml Documentation Dataset Analysis and Extraction"
authors = [
    {name = "Claude", email = "claude@anthropic.com"}
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "numpy>=1.26.0",
    "semantic-version>=2.10.0",
    "sentence-transformers>=3.2.1",
    "tqdm>=4.66.1",
    "openai>=1.0.0",
    "psutil>=7.0.0",
    "torch>=2.0.0,<2.4.0",
    "transformers>=4.51.0",
    "mcp>=1.0.0",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
    "bm25s>=0.1.0",
]
requires-python = ">=3.10,<3.13"

[project.scripts]
extract-docs = "extract_docs:main"
mcp-server = "mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["extract_docs.py", "parse_html.py", "version_utils.py"]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
